--- a/css/travelbotstyle.css
+++ b/css/travelbotstyle.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 /* Body */
+h1 {
+	font-size: 20px;
+}
+
 body {
 	font-family: source-sans-pro;
 	background-color: #f2f2f2;
@@ -73,13 +77,17 @@ ul li:hover a {
 }
 /* Hero Section */
 .hero {
+	background-image: url(../images/planefront.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-color: #B3B3B3;
-	padding-top: 150px;
-	padding-bottom: 150px;
+	padding-top: 20px;
+	padding-bottom: 30px;
 }
 .light {
 	font-weight: bold;
-	color: #717070;
+	color: black;
+	/*color: #717070;*/
 }
 .tagline {
 	text-align: center;
@@ -88,6 +96,31 @@ ul li:hover a {
 	font-weight: lighter;
 	text-transform: uppercase;
 	letter-spacing: 1px;
+}
+
+#info-form {
+	padding: 20px 20px 0 20px;
+	color: #FFFFFF;
+}
+
+#city-input {
+	position: relative;
+}
+
+#cityAutocomplete {
+	position: absolute;
+}
+
+.ui-menu-item a {
+	border: 2px;
+	background: #FFFFFF;
+	font-size: 10px;
+	cursor: default;
+	overflow: auto;
+}
+
+.ui-menu-item a:hover {
+	background: #B3B3B3;
 }
 /* About Section */
 .text_column {
@@ -113,10 +146,16 @@ ul li:hover a {
 	color: #717070;
 	margin-bottom: 5px;
 }
+
+#api1results p {
+	color: black;
+}
+
 .gallery {
 	clear: both;
 	display: inline-block;
 	width: 100%;
+	height: 160px;
 	background-color: #FFFFFF;
 	/* [disabled]min-width: 400px;
 */
@@ -126,7 +165,7 @@ ul li:hover a {
 	margin-bottom: 0px;
 }
 .thumbnail {
-	width: 25%;
+	width: 33.33%;
 	text-align: center;
 	float: left;
 	margin-top: 35px;
@@ -147,12 +186,13 @@ ul li:hover a {
 }
 /* Parallax Section */
 .banner {
+	padding-top: 20px;
+	padding-bottom: 30px;
 	background-color: #2D9AB7;
-	background-image: url(../images/parallax.png);
 	height: 400px;
-	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin: 0 auto;
 }
 .parallax {
 	color: #FFFFFF;
@@ -250,7 +290,7 @@ footer .footer_column p {
 	padding-top: 60px;
 	padding-bottom: 60PX;
 	margin-bottom: 0px;
-	background-image: url(../images/pattern.png);
+	background-image: url(../images/travel-banner.jpg);
 	background-repeat: repeat;
 }
 footer {
